# libnumcpus

./: Cargo.toml  README.md
include/: num_cpus.h
src/: lib.rs
